<resources>
    <string name="app_name">VideoPlayerBase</string>
    <string name="all_videos">All Videos</string>
    <string name="all_folders">All Folders</string>
    <string name="total_videos">Total Videos:</string>
    <string name="total_folders">Total Folders:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">FeedBack</string>
    <string name="themes">Themes</string>
    <string name="sort_order">Sort Order</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="nav_text">Enjoy your entertainment!!</string>

    <string name="video_name">Video Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00:00</string>
    <string name="image">Image</string>

    <string name="loading">Loading..</string>
    <string name="semi_colon">:</string>
    <string name="lock">Lock Icon</string>
    <string name="back_btn">Back Button</string>
    <string name="menu">Menu</string>

    <string name="prev_btn">Menu</string>
    <string name="next_btn">Menu</string>
    <string name="repeat_btn">Menu</string>
    <string name="fullscreen_btn">Menu</string>
    <string name="play_btn">Menu</string>

    <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitles</string>
    <string name="booster">Booster</string>
    <string name="speed">Speed</string>
    <string name="speed_timer">Speed Timer</string>
    <string name="pip_mode">Pip Mode</string>
    <string name="search">Search</string>

    <!--strings for video more features-->
    <string name="rename">Rename </string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="orientation">Orientation</string>
    <string name="O">0</string>
    <string name="apply_to_all">Apply To All Upcoming Videos</string>

    <!-- strings for online playing features-->
    <string name="add_link">Paste Link</string>
    <string name="play">Play Video</string>
    <string name="play_online">Play Online</string>
    <string name="youtube">Youtube</string>
</resources>