<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="2dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/videoImage"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:contentDescription="@string/image"
        android:src="@mipmap/ic_video_player"
        app:shapeAppearanceOverlay="@style/curved" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="2dp">

        <TextView
            android:id="@+id/videoName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="@string/video_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/folderName"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:text="@string/folder_name" />
    </LinearLayout>

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/duration"
        android:textColor="@color/black" />
</LinearLayout>